UNRELEASED
- Request sending reliability improvements (on network failure)
- Allow for underlying socket timeout to be configured
- Synchronous requests now also time out on lack of response (not just send failure)
- Removed redundant seqnum & lowseq_resend parameters (Core.Client)
- Print version information on info logging level
- Minor documentation updates

v0.3.0
- Updated for QAPI v0.7.0 support
- Removed unnecessary returns from ResourceMeta
- IOT.Client.describe() now has optional language parameter - results only
  contain items in chosen language (apart from for Values)
- Tags now require at least 3 characters and can only contain alphanumeric
  (unicode) symbols and underscore
- Search text validation automatically removes invalid words (which adhere to
  same restriction as above for tags).
- Log discarded request message now only when at least one discarded
- Package documentation updates
- Core message decoder now properly handles PROGRESS type (logging)
- Fixed missing logging parameter in Core client
- Allow for comments (metadata) to contain line breaks, simplified text
  validation logic
- Outgoing message queue size and message rates now restriced (configurable)
- Fixed send thread trying to access (retried) request after it has already
  completed
- Removed Point.list_value (Point.list already provides said functionality)
- Corrected default limit for Point.list_values (50)
- For IOT API consistency, now also unwrap dictionary returns (i.e. return only
  the value of key as listed here):
    Client.list ('entities')
    Client.search* ('result')
    Client.describe ('result')
    Thing.list_feeds ('feeds')
    Thing.list_controls ('controls')
    Point.list ('values')
    Point.list_followers ('subs')
- Improved link readability in pdoc output

v0.2.6
- First (public) release