@@ -20,6 +20,8 @@ from __future__ import unicode_literals
 import logging
 logger = logging.getLogger(__name__)
 
+from IoticAgent.Core.Validation import Validation
+
 from .utils import hex_to_uuid
 
 
@@ -32,8 +34,8 @@ class RemoteFeed(object):
 
     def __init__(self, client, subid, feedid):
         self.__client = client
-        self.__subid = subid
-        self.__feedid = feedid
+        self.__subid = Validation.guid_check_convert(subid)
+        self.__feedid = Validation.guid_check_convert(feedid)
 
     @property
     def subid(self):
